--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<input type="button" value="Dark Mode" onclick="window.location.href='indexdark.html'"/>
 		</form> 
 
-		<img src="feet1.jpg" alt="Hot Raydog Feet Pic.jpg" class="center">
+		<img src="https://media.discordapp.net/attachments/734920193444413481/739930499874553856/image0.jpg?width=341&height=455" alt="Hot Raydog Feet Pic.jpg" class="center">
 		<!--------------------------------------------->
 		<div>
 		<a href="rayfeet.html" style="font-family: Arial, Helvetica, sans-serif;color: black;";">Ray's Feet Pics</a>
