--- a/rayfeet.html
+++ b/rayfeet.html
@@ -19,6 +19,6 @@
     </head>
 
     <body>
-        <img src="feet1.jpg">
+        <img src="https://media.discordapp.net/attachments/734920193444413481/739930499874553856/image0.jpg?width=341&height=455">
     </body>
 </html>
