--- a/naughty.html
+++ b/naughty.html
@@ -18,7 +18,7 @@
 
     </head>
 
-    <body>
+    <body style="background-color: rgb(27, 26, 26)">
         <img src="tenor.gif">
         <h1 style="color: black;font-family: Arial, Helvetica, sans-serif;">Get Diggy Diggy Holed Horny Ass</h1>
     </body>
