--- a/rayfeet.html
+++ b/rayfeet.html
@@ -18,7 +18,7 @@
 
     </head>
 
-    <body>
+    <body style="background-color: rgb(27, 26, 26)">
         <img src="https://media.discordapp.net/attachments/734920193444413481/739930499874553856/image0.jpg?width=341&height=455">
     </body>
 </html>
